# docs/swagger.json
@@ -202,7 +202,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.DatasetResp"
+                            "$ref": "#/definitions/handler.DeleteDatasetResp"
                         }
                     },
                     "404": {
@@ -590,6 +590,14 @@
                     "items": {
                         "$ref": "#/definitions/handler.Datasets"
                     }
+                }
+            }
+        },
+        "handler.DeleteDatasetResp": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
                 }
             }
         },
