# handler/delete_dataset.go
@@ -8,6 +8,10 @@ import (
 	"github.com/mager/bluedot/db"
 )
 
+type DeleteDatasetResp struct {
+	ID string `json:"id"`
+}
+
 // deleteDataset godoc
 //
 //	@Summary		Delete a dataset
@@ -18,12 +22,12 @@ import (
 //	@Produce		json
 //	@Param			username	path	string	true	"Username"
 //	@Param			slug		path	string	true	"Slug"
-//	@Success		200	{object}	DatasetResp
+//	@Success		200	{object}	DeleteDatasetResp
 //	@Failure		404	{object}	ErrorResp
 //	@Failure		500	{object}	ErrorResp
 //	@Router			/datasets/{username}/{slug} [delete]
 func (h *Handler) deleteDataset(w http.ResponseWriter, r *http.Request) {
-	resp := DatasetResp{}
+	resp := DeleteDatasetResp{}
 	vars := mux.Vars(r)
 	username := vars["username"]
 	datasetSlug := vars["slug"]
@@ -49,6 +53,13 @@ func (h *Handler) deleteDataset(w http.ResponseWriter, r *http.Request) {
 		h.sendErrorJSON(w, http.StatusInternalServerError, err.Error())
 		return
 	}
+
+	// Delete features
+	h.deleteFeaturesController(r.Context(), dataset.ID)
+
+	h.Logger.Infow("Deleted dataset", "dataset", dataset.ID)
+
+	resp.ID = dataset.ID
 
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(resp)
